@startuml DTOs
!include stylesPlantuml.puml

namespace dtos {
    abstract ResponseDTO {
        + errors : Object[]
        + data : Object
        + message : String
        + status : int
        + toJSON(): String
    }

    abstract RequestDTO {
        + error : ValidationError
        + data : Object
        # validate(): void
    }
    
    namespace agenda {
        class CreateAgendaRequestDTO {
            # validate(): void
        }

        class CreateAgendaResponseDTO {
            
        }
    }

    agenda.CreateAgendaRequestDTO --|> RequestDTO
    agenda.CreateAgendaResponseDTO --|> ResponseDTO
}

dtos.RequestDTO --> errors.validation.ValidationError: "throws"

@enduml